# cloud-native

./: .drone-simple.yml  .drone.yml  .gitignore  README.md  README_COMPLETE.md  detail.md  disk-cleanup-daemonset.yaml  emergency-cleanup.yaml  fix-cni-worker.yaml  fixed-keycloak-pod.yaml  fixed-master-cleanup.yaml  fixed-postgres-pod.yaml  fixed-task-api-pod.yaml  repo.md  test-registry.md  test.md
.github/workflows/: deploy.yml
apps/auth/: keycloak-bootstrap-configmap.yaml  keycloak-bootstrap-job.yaml  keycloak-configmap.yaml  keycloak-deployment.yaml
apps/backend/: task-api-deployment.yaml  task-api-ingress.yaml
apps/backend/task-api/: .drone.yml  Cargo.toml  Dockerfile  build-and-push.sh
apps/backend/task-api/src/: main.rs
apps/backend/task-api/src/handlers/: health.rs
apps/backend/task-api/static/: index.html
apps/ci/: cleanup-job.yaml  drone-runner.yaml  drone-server.yaml
apps/database/: README.md  cluster-app.yaml  cnpg-1.27.0.yaml  db-secret.yaml  postgres-deployment.yaml  postgres-standalone.yaml  (+2 more)
docs/: PRIMER.md  PROJECT_DOCUMENTATION.md  TROUBLESHOOTING.md  architecture-diagram.md  auth-flow-diagram.md  pipeline-diagram.md
gitops/: README.md
kustomization/: README.md
monitoring/: README.md  grafana.yaml  linkerd-viz-ingress.yaml  namespace.yaml  prometheus.yaml
scripts/: README.md  cleanup-nodes.sh  deploy.sh  drone-oauth-setup.sh  drone-oauth.sh  fix-hosts.sh  install-clis.sh  keycloak-validate.sh  mirror-images.sh  observability.sh  patch-ips.sh  port-forward-all.sh  resize-worker-disk.sh  setup.sh  split-to-gitea.sh
(+24 files in other folders)
